sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value L
    for (i <- 0 to L.lenght - 2){
                   ^AlgBubbleSort1:7: error: not found: value L
      if(L(i) > L(i+1)){
         ^AlgBubbleSort1:7: error: not found: value L
      if(L(i) > L(i+1)){
                ^AlgBubbleSort1:8: error: not found: value L
        var temp = L(i)
                   ^AlgBubbleSort1:9: error: not found: value L
        L(i) = L(i+1)
        ^AlgBubbleSort1:9: error: not found: value L
        L(i) = L(i+1)
               ^AlgBubbleSort1:10: error: not found: value L
        L(i+1) = temp
        ^AlgBubbleSort1:15: error: not found: value L
  return L
         ^AlgBubbleSort1:15: warning: enclosing method bubbleSort has result type Unit: return value discarded
  return L
  ^