sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var tri = 0
  while(tri == 0){
    tri = 1
    for (i <- 0 to L.lenght - 2){
      if(L(i) > L(i+1)){
        var temp = L(i)
        L(i) = L(i+1)
        L(i+1) = temp
        tri = 0
      }
    }
  }
  return L
}